--- a/sample_java/build.gradle
+++ b/sample_java/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     packagingOptions {
         exclude 'META-INF/*.kotlin_module'
     }
