--- a/config.gradle
+++ b/config.gradle
@@ -28,7 +28,7 @@ ext {
 
                     //
                     retrofit            : "2.9.0",
-                    okhttp              : '4.9.0',
+                    okhttp              : '5.0.0-alpha.2',
                     glide               : '4.11.0',
                     eventbus            : '3.2.0'
 
