--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.kotlin_version = '1.4.32'
     repositories {
         mavenCentral()
+        maven {url 'https://maven.aliyun.com/repository/public/'}
         google()
         jcenter()
         maven { url "https://jitpack.io" }
@@ -14,17 +15,20 @@ buildscript {
         maven { url 'https://dl.bintray.com/javakam/FileOperator' }
     }
     dependencies {
-        //gradle-wrapper.properties 👉 https://developer.android.com/studio/releases/gradle-plugin#updating-gradle
+        // gradle-wrapper.properties
+        // https://developer.android.com/studio/releases/gradle-plugin#updating-gradle
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath('io.deepmedia.tools:publisher:0.5.0')
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
+
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        maven {url 'https://maven.aliyun.com/repository/public/'}
         google()
         jcenter()
         maven { url "https://jitpack.io" }
