--- a/library_android_q/build.gradle
+++ b/library_android_q/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'io.deepmedia.tools.publisher'
 }
 
 def config = rootProject.ext.android
@@ -49,31 +48,7 @@ dependencies {
     compileOnly 'androidx.documentfile:documentfile:1.0.1'
 }
 
-//publish {
-//    repoName = 'FileOperator'
-//    userOrg = 'javakam'
-//    groupId = 'ando.file'
-//    artifactId = 'android-q'
-//    publishVersion = config.versionName
-//    desc = 'FileOperator Compatible with Android Q.'
-//    website = "https://github.com/javakam/${rootProject.name}"
-//    //dryRun = false
-//}
-
-publisher {
-    project.name = "FileOperator"
-    project.description = "FileOperator Compatible with Android Q."
-    project.artifact = "android-q"
-    project.group = "ando.file"
-    project.url = "https://github.com/javakam/${rootProject.name}"
-    project.packaging = "aar"
-
-    release.version = config.versionName
-    release.tag = "v${config.versionName}"
-    release.description = "${project.name}"
-    sonatype("") {
-    }
-
-//    signing.key =project.findProperty(signing.keyId)
-//    signing.password =project.findProperty(signing.password)
+ext {
+    PUBLISH_ARTIFACT_ID = 'android-q'
 }
+apply from: "${rootProject.projectDir}/publish.gradle"
