--- a/library_selector/build.gradle
+++ b/library_selector/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-parcelize'
-    id 'io.deepmedia.tools.publisher'
 }
 
 def config = rootProject.ext.android
@@ -46,31 +45,7 @@ dependencies {
     compileOnly project(':library')
 }
 
-//publish {
-//    repoName = 'FileOperator'
-//    userOrg = 'javakam'
-//    groupId = 'ando.file'
-//    artifactId = 'selector'
-//    publishVersion = config.versionName
-//    desc = 'Android File Selector.'
-//    website = "https://github.com/javakam/${rootProject.name}"
-//    //dryRun = true
-//}
-
-publisher {
-    project.name = "FileOperator"
-    project.description = "Android File Selector."
-    project.artifact = "selector"
-    project.group = "ando.file"
-    project.url = "https://github.com/javakam/${rootProject.name}"
-    project.packaging = "aar"
-
-    release.version = config.versionName
-    release.tag = "v${config.versionName}"
-    release.description = "${project.name}"
-    sonatype("") {
-    }
-
-//    signing.key =project.findProperty(signing.keyId)
-//    signing.password =project.findProperty(signing.password)
+ext {
+    PUBLISH_ARTIFACT_ID = 'selector'
 }
+apply from: "${rootProject.projectDir}/publish.gradle"
