--- a/library_selector_ui/build.gradle
+++ b/library_selector_ui/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'io.deepmedia.tools.publisher'
 }
 
 def config = rootProject.ext.android
@@ -49,32 +48,7 @@ dependencies {
 
 }
 
-//publish {
-//    repoName = 'FileOperator'
-//    userOrg = 'javakam'
-//    groupId = 'ando.file'
-//    artifactId = 'ui'
-//    publishVersion = config.versionName
-//    desc = 'Android File Selector UI.'
-//    website = "https://github.com/javakam/${rootProject.name}"
-//    //dryRun = true
-//}
-
-publisher {
-    project.name = "FileOperator"
-    project.description = "Android File Selector UI."
-    project.artifact = "selector-ui"
-    project.group = "ando.file"
-    project.url = "https://github.com/javakam/${rootProject.name}"
-    project.packaging = "aar"
-
-    release.version = config.versionName
-    release.tag = "v${config.versionName}"
-    release.description = "${project.name}"
-
-    sonatype("") {
-    }
-
-//    signing.key =project.findProperty(signing.keyId)
-//    signing.password =project.findProperty(signing.password)
+ext {
+    PUBLISH_ARTIFACT_ID = "selector-ui"
 }
+apply from: "${rootProject.projectDir}/publish.gradle"
