--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
 
     //https://github.com/Curzibn/Luban/issues/337
-    compileOnly "androidx.exifinterface:exifinterface:1.3.2"
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
 
     implementation project(':library_core')
 
