--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.activity:activity-ktx:1.2.0-beta02'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha06'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
