--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 def config = rootProject.ext.android
-def version = rootProject.ext.version
+def versions = rootProject.ext.versions
 
 android {
     compileSdkVersion config.compileSdkVersion
@@ -90,10 +90,10 @@ dependencies {
 
     // OkHttp + retrofit
     implementation "com.google.code.gson:gson:2.8.6"
-    implementation "com.squareup.okhttp3:okhttp:$version.okhttp"
-    implementation "com.squareup.okhttp3:logging-interceptor:$version.okhttp"
-    implementation "com.squareup.retrofit2:retrofit:$version.retrofit"
-    implementation "com.squareup.retrofit2:converter-gson:$version.retrofit"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
 }
 
