--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
         <activity
             android:name=".ui.FileInfoActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.MediaInfoActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
