--- a/config.gradle
+++ b/config.gradle
@@ -6,32 +6,13 @@ ext {
             buildToolsVersion: '30.0.3',
             minSdkVersion    : 21,
             targetSdkVersion : 30,
-            versionCode      : 6,
-            versionName      : "1.6.2"
+            versionCode      : 8,
+            versionName      : "1.7.0"
     ]
 
-    version =
+    versions =
             [
-                    support             : "1.0.0",
-                    appcompat           : "1.1.0",
-                    fragment            : "1.2.5",
-                    material            : '1.2.1',
-
-                    kotlin_coroutines   : '1.4.2-native-mt',
-                    core_ktx            : "1.3.2",
-                    core_testing        : '2.1.0',
-                    room                : '2.2.5',
-                    lifecycle           : "2.2.0",
-                    lifecycle_save_state: '2.2.0',
-                    work                : "2.4.0",
-                    paging              : '3.0.0-alpha06',
-
-                    //
-                    retrofit            : "2.9.0",
-                    okhttp              : '5.0.0-alpha.2',
-                    glide               : '4.11.0',
-                    eventbus            : '3.2.0'
-
+                    eventbus: '3.2.0'
             ]
 
 }
