--- a/library_core/build.gradle
+++ b/library_core/build.gradle
@@ -43,20 +43,10 @@ android {
 
 dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.3.0'
-    compileOnly 'androidx.annotation:annotation:1.1.0'
+    compileOnly 'androidx.annotation:annotation:1.2.0'
+    //https://github.com/Curzibn/Luban/issues/337
+    compileOnly 'androidx.exifinterface:exifinterface:1.3.2'
 }
-
-//publish {
-//    repoName = 'FileOperator'
-//    userOrg = 'javakam'
-//    groupId = 'ando.file'
-//    artifactId = 'core'
-//    publishVersion = config.versionName
-//    desc = 'FileOperator Core Library.'
-//    website = "https://github.com/javakam/${rootProject.name}"
-//    //true 上传前测试 ; false 正常上传
-//    //dryRun = true
-//}
 
 ext {
     PUBLISH_ARTIFACT_ID = "file.core"
