--- a/library_core/src/main/AndroidManifest.xml
+++ b/library_core/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/ando_file_paths" />
+                android:resource="@xml/ando_paths" />
         </provider>
     </application>
 
